# Photon

./: .gitignore  CMakeLists.txt  Colors.h  Matrix.cpp  Matrix.h  README.md  Video.cpp  Video.h  aaaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhhhhhhhhh.cpp  camera.h  main.cpp  most_basic_possible_sdl.c  potatoe.cpp  ray.h  ray_fire.cpp  video.cpp  video.h  window.cpp  window.h  window_event.cpp  window_event.h
Vec3/: Vec3.h  br.sh  main.cpp  test.cpp
obselete/: SamPotatoRayTracer.cpp  potatoe.cpp
shapes/: Cube.cpp  Cube.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h
util/: Point.h  Ray.h  Vec3.h
